--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -29,14 +29,16 @@ body {
 // Container 
 
 .container {
-    width: 1200px;
+    max-width: 1200px;
     padding-right: 15px;
     padding-left: 15px;
     padding-top: 94px;
     padding-bottom: 94px;
     margin: 0 auto;
 }
+
 // Button 
+
 .btn {
     display: inline-flex;
     min-width: 200px;
@@ -58,13 +60,11 @@ body {
     align-items: center;
     text-align: center;
     cursor: pointer;
-
 }
 
 // Section 
 
 .section-title {
-       
     margin-top: 0;
     margin-bottom: 50px;
     
