--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -66,7 +66,7 @@ body {
 
 .section-title {
     margin-top: 0;
-    margin-bottom: 50px;
+    // margin-bottom: 50px;
     
     color: $title-text-color;
 
