--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,9 @@
 @import "./base/normalize";
 @import "./components/logo";
 @import "./components/common";
+@import "./components/container";
+@import "./components/section";
+@import "./components/btn";
 @import "./components/page-header";
 @import "./components/hero";
 @import "./components/features";
