--- a/css/main.css
+++ b/css/main.css
@@ -360,20 +360,11 @@ body {
 }
 
 .container.main-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   padding-top: 0;
   padding-bottom: 0;
-}
-
-.site-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .site-nav .item:not(:last-child) {
@@ -412,9 +403,6 @@ body {
 }
 
 .contact-info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin-left: auto;
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
@@ -474,7 +462,7 @@ body {
 }
 
 .hero-title {
-  width: 650px;
+  max-width: 650px;
   margin-top: 0;
   margin-bottom: 30px;
   margin-left: auto;
@@ -501,12 +489,6 @@ body {
 
 .container.features {
   border-bottom: 1px solid #ECECEC;
-}
-
-.feature-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .feature-list__item:not(:last-child) {
@@ -602,12 +584,6 @@ body {
 
 .section.team {
   background-color: #F5F4FA;
-}
-
-.team-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
 .card {
@@ -895,8 +871,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 15px;
-  height: 15px;
+  width: 17px;
+  height: 17px;
   fill: currentColor;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -954,14 +930,6 @@ body {
 .form-input:focus ~ .icon-input,
 .form-input:not(:placeholder-shown) ~ .icon-input {
   fill: #2196F3;
-}
-
-.clients-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
 }
 
 .client {
