--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,7 +1,7 @@
 // Clients 
 .clients-list {
-    display: flex;
-    justify-content: space-around;
+    // display: flex;
+    // justify-content: space-around;
 }
 .client {
     position: relative;
