--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,6 +1,6 @@
 .logotype {
-    display: block;
-    margin-right: 85px;
+    // display: block;
+    // margin-right: 85px;
 }
 .logo {
     display: inline-block ;
