--- a/css/main.css
+++ b/css/main.css
@@ -255,11 +255,6 @@ summary {
   display: list-item;
 }
 
-.logotype {
-  display: block;
-  margin-right: 85px;
-}
-
 .logo {
   display: inline-block;
   color: #2196F3;
@@ -315,12 +310,33 @@ body {
 }
 
 .container {
-  max-width: 1200px;
-  padding-right: 15px;
   padding-left: 15px;
-  padding-top: 94px;
-  padding-bottom: 94px;
-  margin: 0 auto;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .section-title {
@@ -360,98 +376,20 @@ body {
 }
 
 .container.main-container {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding-top: 0;
-  padding-bottom: 0;
+  padding-top: 16px;
+  padding-left: 15px;
+  padding-right: 23px;
+  padding-bottom: 16px;
+  margin: 0;
 }
 
-.site-nav .item:not(:last-child) {
-  margin-right: 50px;
+.menu {
+  position: fixed;
 }
 
-.site-nav .link {
-  color: #212121;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  position: relative;
-}
-
-.site-nav .link:hover,
-.site-nav .link:focus,
-.site-nav .link:active {
-  color: #2196F3;
-}
-
-.site-nav .link.current {
-  color: #2196F3;
-}
-
-.link.current::after {
-  content: '';
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background: #2196F3;
-  bottom: 0;
-  left: 0;
-  opacity: 1;
-}
-
-.contact-info {
-  margin-left: auto;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-}
-
-.contact-info .contact-info__item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.icon-letter {
-  display: block;
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
-  fill: currentColor;
-}
-
-.icon-phone {
-  display: block;
-  width: 10px;
-  height: 15px;
-  margin-right: 10px;
-  fill: currentColor;
-}
-
-.contact-info__link {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  color: #757575;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contact-info__link:hover,
-.contact-info__link:focus,
-.contact-info__link:active {
-  color: #2196F3;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+.menu.is-hidden {
+  opacity: 0;
+  pointer-events: none;
 }
 
 .hero {
@@ -545,10 +483,10 @@ body {
   fill: currentColor;
 }
 
-.work-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.section.doing {
+  position: fixed;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .work-list > li.item {
@@ -679,7 +617,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 10;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
@@ -971,12 +909,6 @@ body {
 
 /* Footer */
 .container.footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -1020,8 +952,6 @@ body {
 }
 
 .join {
-  display: block;
-  margin-bottom: 20px;
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
@@ -1046,38 +976,21 @@ body {
   background-color: #2F303A;
 }
 
-.mailing {
-  margin-left: 94px;
-}
-
-.mailing-form {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 .btn.submit {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
   font-weight: 900;
   letter-spacing: 0.06em;
-  margin-left: 12px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .submit-icon {
   display: block;
   width: 24px;
   height: 24px;
-  margin-left: 10px;
   fill: currentColor;
-}
-
-.social.footer {
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
 }
 
 .social-link {
