--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,10 +1,28 @@
 // Container 
-
 .container {
-    max-width: 1200px;
-    padding-right: 15px;
     padding-left: 15px;
-    padding-top: 94px;
-    padding-bottom: 94px;
-    margin: 0 auto;
-}
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+  
+    @media screen and (min-width: 480px) {
+      width: 480px;
+    }
+  
+    @media screen and (min-width: 768px) {
+      width: 768px;
+    }
+  
+    @media screen and (min-width: 1200px) {
+      width: 1200px;
+    }
+  }
+
+// .container {
+//     max-width: 1200px;
+//     padding-right: 15px;
+//     padding-left: 15px;
+//     padding-top: 94px;
+//     padding-bottom: 94px;
+//     margin: 0 auto;
+// }
