--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,5 +1,7 @@
-// Section 
-
+.section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
 .section-title {
     margin-top: 0;
     // margin-bottom: 50px;
@@ -14,3 +16,5 @@
     text-align: center;
     letter-spacing: 0.03em;
 }
+
+
