--- a/css/main.css
+++ b/css/main.css
@@ -341,6 +341,7 @@ body {
 
 .section-title {
   margin-top: 0;
+  margin-bottom: 30px;
   color: #212121;
   font-family: Roboto, sans-serif;
   font-style: normal;
@@ -425,19 +426,34 @@ body {
   background-repeat: no-repeat;
 }
 
-.container.features {
-  border-bottom: 1px solid #ECECEC;
-}
-
 .feature-list__item:not(:last-child) {
-  margin-right: 30px;
+  margin-bottom: 30px;
 }
 
-.feature-list p {
-  width: 270px;
-  height: 75px;
-  margin-top: 0;
-  margin-bottom: 0;
+@media screen and (min-width: 768px) {
+  .feature-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .feature-list__item {
+    display: inline-block;
+    width: 354px;
+  }
+  .feature-list__item:nth-last-child(-n + 2) {
+    margin-bottom: 30px;
+  }
+  .feature-list__item:nth-last-child(2n + 1) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .feature-list__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .title {
@@ -450,21 +466,19 @@ body {
   font-size: 14px;
   line-height: 1.2;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .box {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 270px;
-  height: 120px;
+  display: block;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   padding-top: 25px;
   padding-bottom: 25px;
   margin-bottom: 30px;
+  border-radius: 4px;
   background-color: #F5F4FA;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -472,6 +486,50 @@ body {
 
 .box:hover {
   background-color: #2196F3;
+}
+
+@media screen and (min-width: 480px) and (max-width: 768px) {
+  .box {
+    max-width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .box {
+    max-width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .box {
+    max-width: 270px;
+  }
+}
+
+.feature-list p {
+  margin-top: 0;
+  margin-bottom: 0;
+  display: inline-block;
+  width: 100%;
+  text-align: justify;
+}
+
+@media screen and (min-width: 480px) and (max-width: 768px) {
+  .feature-list p {
+    max-width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .feature-list p {
+    max-width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .feature-list p {
+    max-width: 270px;
+  }
 }
 
 .box-icon {
@@ -524,16 +582,54 @@ body {
   background-color: #F5F4FA;
 }
 
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team-list .item:nth-last-child(-n + 2) {
+    margin-bottom: 30px;
+  }
+  .team-list .item:nth-last-child(2n + 1) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list .item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
 .card {
-  width: 270px;
+  max-width: 100%;
   -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
+  border-radius: 0px 0px 4px 4px;
   padding-bottom: 0;
 }
 
+@media screen and (min-width: 768px) {
+  .card {
+    width: 354px;
+    height: 422px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card {
+    width: 270px;
+    height: 422px;
+  }
+}
+
 .card-team {
-  display: block;
   background-color: #FFFFFF;
   padding-top: 30px;
   padding-bottom: 24px;
@@ -606,10 +702,6 @@ body {
 .social-link:hover {
   fill: #FFFFFF;
   background-color: #2196F3;
-}
-
-.team-list .item:not(:last-child) {
-  margin-right: 30px;
 }
 
 /* Modal */
@@ -870,10 +962,20 @@ body {
   fill: #2196F3;
 }
 
+.clients-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
 .client {
   position: relative;
   display: block;
-  width: 170px;
+  width: 210px;
   height: 90px;
   padding-top: 20px;
   border: 1px solid #AFB1B8;
@@ -881,6 +983,18 @@ body {
   fill: #AFB1B8;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .client {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client {
+    width: 170px;
+  }
 }
 
 .client:hover {
@@ -905,6 +1019,10 @@ body {
 .client:hover .client-logo {
   -webkit-transform: scale(1.25);
           transform: scale(1.25);
+}
+
+.client:nth-last-child(-n + 2) {
+  margin-bottom: 30px;
 }
 
 /* Footer */
