--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,12 +1,13 @@
 // Clients 
 .clients-list {
-    // display: flex;
-    // justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .client {
     position: relative;
     display: block;
-    width: 170px;
+    width: 210px;
     height: 90px;
     padding-top: 20px;
 
@@ -17,7 +18,28 @@
 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        @media screen and (min-width:768px) {
+
+           & {
+            width: 226px;
+           }
+
+        }
+
+        @media screen and (min-width:1200px) {
+
+            & {
+                width: 170px;
+            }
+        }
+
+
+
+    
+
 }
+
 .client:hover {
     border-color: $accent-color;
     fill: $accent-color;
@@ -41,3 +63,7 @@
     transform: scale(1.25);
 
 } 
+
+.client:nth-last-child(-n + 2) {
+    margin-bottom: 30px;
+}
