--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,21 +1,57 @@
-// Team 
-
 .section.team {
     background-color: $portfolio-bg;
 }
 
-.team-list {
-    // display: flex;
+@media screen and (min-width: 768px) {
+    .team-list {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    
+    .team-list .item:nth-last-child(-n + 2) {
+        margin-bottom: 30px;
+    } 
+    .team-list .item:nth-last-child(2n + 1) {
+        margin-right: 30px;
+    }
+
+}
+
+@media screen and (min-width:1200px) {
+    .team-list .item:not(:last-child) {
+        margin-right: 30px;
+    }
+    
 }
 
 .card {
-    width: 270px;
+    max-width: 100%;
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
+    border-radius: 0px 0px 4px 4px;
     padding-bottom: 0;
+
+        @media screen and (min-width:768px) {
+
+            & {
+              width: 354px;
+              height: 422px;
+            }
+        }
+
+        @media screen and (min-width:1200px) {
+
+            & {
+                width: 270px;
+                height: 422px;
+            }
+        }
 }
 .card-team {
-    display: block;
+    // display: block;
     background-color: $white-color;
     padding-top: 30px;
     padding-bottom: 24px;
@@ -30,7 +66,6 @@
 }
 
 .social-link {
-
     position: relative;
     display: flex;
     width: 44px;
@@ -43,9 +78,6 @@
 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-
-
 }
 
 .social-icon {
@@ -58,8 +90,8 @@
 .social-item:not(:last-child) {
     margin-right: 10px;
 }
-.team-title {
 
+.team-title {
     margin-top: 0;
     margin-bottom: 10px;
 
@@ -75,7 +107,6 @@
 }
 
 .team-title.position {
-
     margin-top: 0;
     margin-bottom: 16px;
 
@@ -85,11 +116,17 @@
     text-align: center;
 }
 .social-link:hover {
-
     fill: $white-color;
     background-color: $accent-color;
 }
 
-.team-list .item:not(:last-child) {
-    margin-right: 30px;
-}
+// .team-list .item:not(:last-child) {
+//     margin-right: 30px;
+// }
+
+// @media screen and (min-width:768px) {
+//     .team-list .item:not(:last-child) {
+//         margin-right: 30px;
+//     }
+
+// }
