--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -7,7 +7,7 @@
 }
 
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width:1199px) {
     .feature-list {
         display: flex;
         flex-wrap: wrap;
@@ -15,21 +15,33 @@
     .feature-list__item {
         display: inline-block;
         width: 354px;
-        &:nth-last-child(-n + 2) {
-            margin-bottom: 30px;
-        } 
-        &:nth-last-child(2n + 1) {
+    }
+
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    .feature-list__item:nth-last-child(-n + 2) {
+        margin-bottom: 30px;
+    } 
+    .feature-list__item:nth-child(2n + 1) {
+        margin-right: 30px;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .feature-list {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .feature-list__item {
+        width: 270px;
+    
+        &:not(:last-child) {
             margin-right: 30px;
         }
     }
 
-
-}
-
-@media screen and (min-width:1200px) {
-    .feature-list__item:not(:last-child) {
-        margin-right: 30px;
-    }
 }
     
 
@@ -47,12 +59,17 @@
     line-height: 1.2;
     text-transform: uppercase;
     text-align: center;
+
+    @media screen and (min-width:768px) {
+        & {
+            text-align: left;
+        }
+        
+    }
 }
 .box {
     position: relative;
     display: block;
-    // min-width: 270px;
-    // min-height: 120px;
     align-items: center;
     padding-top: 25px;
     padding-bottom: 25px;
@@ -66,16 +83,16 @@
     &:hover {
         background-color: $accent-color;
     }
-    @media screen and (min-width:480px) and (max-width:768px) {
-        max-width: 450px; 
-      }
-      @media screen and (min-width:768px) and (max-width:1199px) {
-         max-width: 354px;
-      }
-      @media screen and (min-width:1200px) {
-          max-width: 270px;
+    // @media screen and (min-width:480px) and (max-width:768px) {
+    //     max-width: 450px; 
+    //   }
+    //   @media screen and (min-width:768px) and (max-width:1199px) {
+    //      max-width: 354px;
+    //   }
+    //   @media screen and (min-width:1200px) {
+    //       max-width: 270px;
           
-      }
+    //   }
   
 
 }
