--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -16,6 +16,8 @@
   
     @media screen and (min-width: 1200px) {
       width: 1200px;
+      padding-top: 94px;
+      padding-bottom: 0;
     }
   }
 
