правит маржины в тим

--- a/css/main.css
+++ b/css/main.css
@@ -603,11 +603,8 @@ body {
 }
 
 @media screen and (min-width: 1200px) {
-  .team-list .item {
+  .team-list .item:not(:last-child) {
     margin-right: 30px;
-  }
-  .team-list .item:last-child {
-    margin-right: 0;
   }
 }
 
