--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -18,11 +18,8 @@
         }
     }
     @media screen and (min-width:1200px) {
-        & {
+        &:not(:last-child) {
             margin-right: 30px;
-        }
-        &:last-child {
-            margin-right: 0;
         }
     }
 
