правит секцию дуинг

--- a/css/main.css
+++ b/css/main.css
@@ -544,10 +544,18 @@ body {
   fill: currentColor;
 }
 
-.section.doing {
-  position: fixed;
-  opacity: 0;
-  pointer-events: none;
+@media screen and (max-width: 1199px) {
+  .section.doing {
+    display: none;
+  }
+}
+
+.work-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .work-list > li.item {
