--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -15,17 +15,12 @@
     }
   
     @media screen and (min-width: 1200px) {
-      width: 1200px;
+      max-width: 1200px;
       padding-top: 94px;
-      padding-bottom: 0;
+      padding-bottom: 94;
+      padding-right: 15px;
+      padding-left: 15px;
+      margin: 0 auto;
     }
   }
 
-// .container {
-//     max-width: 1200px;
-//     padding-right: 15px;
-//     padding-left: 15px;
-//     padding-top: 94px;
-//     padding-bottom: 94px;
-//     margin: 0 auto;
-// }
