--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./components/container";
 @import "./components/section";
 @import "./components/btn";
+@import "./components/menu";
 @import "./components/page-header";
 @import "./components/hero";
 @import "./components/features";
