--- a/css/main.css
+++ b/css/main.css
@@ -255,6 +255,10 @@ summary {
   display: list-item;
 }
 
+.logotype {
+  display: inline-block;
+}
+
 .logo {
   display: inline-block;
   color: #2196F3;
@@ -381,10 +385,34 @@ body {
   cursor: pointer;
 }
 
-.menu-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.container.main-container {
+  padding-top: 22px;
+  padding-left: 15px;
+  padding-right: 23px;
+  padding-bottom: 22px;
+}
+
+@media screen and (max-width: 767px) {
+  .container.main-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.menu {
+  position: fixed;
+}
+
+.menu.is-hidden {
+  opacity: 0;
+  pointer-events: none;
 }
 
 .menu-button {
@@ -413,71 +441,6 @@ body {
 
 .menu-button.is-open .icon-menu {
   display: none;
-}
-
-.menu {
-  background-color: palegoldenrod;
-  padding: 20px;
-  text-align: center;
-  font-size: 20px;
-}
-
-@media screen and (max-width: 767px) {
-  .menu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-  }
-  .menu.is-open {
-    display: block;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-  }
-}
-
-.navigation,
-.contacts {
-  height: 50px;
-  width: 140px;
-}
-
-.navigation {
-  outline: 1px solid teal;
-}
-
-.contacts {
-  outline: 1px solid orange;
-}
-
-.container.main-container {
-  padding-top: 16px;
-  padding-left: 15px;
-  padding-right: 23px;
-  padding-bottom: 16px;
-  margin: 0;
-}
-
-.menu {
-  position: fixed;
-}
-
-.menu.is-hidden {
-  opacity: 0;
-  pointer-events: none;
 }
 
 .hero {
