--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,9 +1,14 @@
 .container.main-container {
-    padding-top: 16px;
+    padding-top: 22px;
     padding-left: 15px;
     padding-right: 23px;
-    padding-bottom: 16px;
-    margin: 0;
+    padding-bottom: 22px;
+
+    @media screen and (max-width: 767px) {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
 }
 
 .menu {
@@ -14,3 +19,27 @@
     opacity: 0;
     pointer-events: none;
 }
+
+.menu-button {
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+  
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
+  }
+  
+  .menu-button .icon-close {
+    display: none;
+  }
+  
+  .menu-button.is-open .icon-close {
+    display: block;
+  }
+  
+  .menu-button.is-open .icon-menu {
+    display: none;
+  }
