правки в мобильное меню

--- a/css/main.css
+++ b/css/main.css
@@ -385,6 +385,38 @@ body {
   cursor: pointer;
 }
 
+.menu {
+  fill: currentColor;
+}
+
+@media screen and (max-width: 767px) {
+  .menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+  }
+  .menu.is-open {
+    display: block;
+    fill: #2196F3;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+}
+
 .container.main-container {
   padding-top: 22px;
   padding-left: 15px;
