--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,28 +1,28 @@
   
-  // .menu {
-  //   background-color: palegoldenrod;
-  //   padding: 20px;
-  //   text-align: center;
-  //   font-size: 20px;
+  .menu {
+
+    fill: currentColor;
+ 
   
-  //   @media screen and (max-width: 767px) {
-  //     display: none;
-  //     position: absolute;
-  //     top: 100%;
-  //     left: 0;
-  //     width: 100%;
+    @media screen and (max-width: 767px) {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
   
-  //     &.is-open {
-  //       display: block;
-  //     }
-  //   }
+      &.is-open {
+        display: block;
+        fill: $accent-color;
+      }
+    }
   
-  //   @media screen and (min-width: 768px) {
-  //     display: flex;
-  //     justify-content: space-between;
-  //     flex-grow: 1;
-  //   }
-  // }
+    @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+      flex-grow: 1;
+    }
+  }
   
   // .navigation,
   // .contacts {
