--- a/css/main.css
+++ b/css/main.css
@@ -313,6 +313,10 @@ body {
   letter-spacing: 0.03em;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 .container {
   padding-left: 15px;
   padding-right: 15px;
@@ -385,24 +389,6 @@ body {
   cursor: pointer;
 }
 
-.menu {
-  fill: currentColor;
-}
-
-@media screen and (max-width: 767px) {
-  .menu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-  }
-  .menu.is-open {
-    display: block;
-    fill: #2196F3;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .menu {
     display: -webkit-box;
@@ -415,6 +401,103 @@ body {
         -ms-flex-positive: 1;
             flex-grow: 1;
   }
+}
+
+/* Site-nav */
+.site-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.site-nav .item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.site-nav .link {
+  color: #212121;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  position: relative;
+}
+
+.site-nav .link:hover,
+.site-nav .link:focus,
+.site-nav .link:active {
+  color: #2196F3;
+}
+
+.site-nav .link.current {
+  color: #2196F3;
+}
+
+.link.current::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background: #2196F3;
+  bottom: 0;
+  left: 0;
+  opacity: 1;
+}
+
+.contact-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: auto;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+.contact-info .contact-info__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.icon-letter {
+  display: block;
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  fill: currentColor;
+}
+
+.icon-phone {
+  display: block;
+  width: 10px;
+  height: 15px;
+  margin-right: 10px;
+  fill: currentColor;
+}
+
+.contact-info__link {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #757575;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-info__link:hover,
+.contact-info__link:focus,
+.contact-info__link:active {
+  color: #2196F3;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .container.main-container {
@@ -440,11 +523,21 @@ body {
 
 .menu {
   position: fixed;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
 }
 
 .menu.is-hidden {
   opacity: 0;
   pointer-events: none;
+}
+
+.menu.is-open {
+  display: block;
+  fill: #2196F3;
 }
 
 .menu-button {
@@ -801,22 +894,58 @@ body {
   background-color: #2196F3;
 }
 
-/* Modal */
-.backdrop {
+.backdrop-menu {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
-  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #FFFFFF;
+  padding: 50px 30px;
+  overflow-y: scroll;
 }
 
-.backdrop.is-hidden {
+@media screen and (min-width: 768px) {
+  .backdrop-menu {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+.backdrop.is-hidden,
+.backdrop-menu.is-hidden {
   opacity: 0;
   pointer-events: none;
+}
+
+.modal-menu {
+  padding: 20px;
+  background-color: #fff;
+}
+
+@media (max-width: 767px) {
+  .modal-menu {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    max-width: 500px;
+    width: 100%;
+  }
 }
 
 .modal {
