--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,21 +1,24 @@
   
   .menu {
 
-    fill: currentColor;
+    // padding-top: 60px;
+    // padding-bottom: 60px;
+
+    // // fill: currentColor;
  
   
-    @media screen and (max-width: 767px) {
-      display: none;
-      position: absolute;
-      top: 100%;
-      left: 0;
-      width: 100%;
+    // @media screen and (max-width: 767px) {
+    //   display: none;
+    //   position: absolute;
+    //   top: 100%;
+    //   left: 0;
+    //   width: 100%;
   
-      &.is-open {
-        display: block;
-        fill: $accent-color;
-      }
-    }
+    //   &.is-open {
+    //     display: block;
+    //     // fill: $accent-color;
+    //   }
+    // }
   
     @media screen and (min-width: 768px) {
       display: flex;
@@ -37,3 +40,108 @@
   // .contacts {
   //   outline: 1px solid orange;
   // }
+  /* Site-nav */
+
+// @media screen and (min-width:1200px) {
+
+//       .site-nav {
+//       display: flex;
+// }
+
+.site-nav {
+  display: flex;
+}
+
+.site-nav .item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.site-nav .link {
+  color: $title-text-color; 
+
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  position: relative;
+  
+}
+.site-nav .link:hover, 
+.site-nav .link:focus,
+.site-nav .link:active {
+  color: $accent-color;
+}
+.site-nav  .link.current  {
+  color: $accent-color;
+
+}
+
+
+.link.current::after {
+
+  content:'';
+  display: block;
+  position: absolute;
+
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background: $accent-color;
+  bottom: 0;
+  left: 0;
+
+  opacity: 1;
+
+}
+
+.contact-info {
+  display: flex;
+  margin-left: auto;
+  align-items: baseline;
+}
+
+.contact-info .contact-info__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+
+.icon-letter  {
+
+  display: block;
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  fill: currentColor;
+
+}
+
+.icon-phone {
+
+  display: block;
+  width: 10px;
+  height: 15px;
+  margin-right: 10px;
+  fill: currentColor;
+
+}
+
+.contact-info__link {
+
+  position: relative;
+  display: flex;
+  color: $primary-text-color;
+  align-items:center;
+  transform: scale(1);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.contact-info__link:hover,
+.contact-info__link:focus,
+.contact-info__link:active {
+
+ color: $accent-color;
+ transform: scale(1.1);
+
+}
