--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,25 +1,62 @@
-/* Modal */
+
+.backdrop-menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        background-color: $white-color;
+
+        padding: 50px 30px;
+        overflow-y: scroll;
+
+        @media screen and (min-width:768px) {
+            & {
+                display: none;
+            }
+        }
+}
 
 .backdrop {
+    
+    @media screen and (min-width:1200px) {
+        
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 10;
 
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 10;
+        width: 100%;
+        height: 100%;
+        background-color: $input-bg-color;
 
-    width: 100%;
-    height: 100%;
-    background-color: $input-bg-color;
-
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
 }
-.backdrop.is-hidden {
+
+.backdrop.is-hidden,
+.backdrop-menu.is-hidden {
 
     opacity: 0;
     pointer-events: none;
     
 }
+
+.modal-menu {
+    padding: 20px;
+    background-color: #fff;
+  
+    @media (max-width: 767px) {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 500px;
+      width: 100%;
+    }
+  }
 
 .modal {
 
