--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -12,13 +12,26 @@
 }
 
 .menu {
+
     position: fixed;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background: $white-color;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
+
+
+    &.is-hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    &.is-open {
+      display: block;
+      fill: $accent-color;
+    }
+
 }
 
-.menu.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-}
 
 .menu-button {
     display: inline-flex;
