--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,10 +2,14 @@
 @import "./base/normalize";
 @import "./components/logo";
 @import "./components/common";
+@import './utils/placeholders';
+@import './utils/mixins';
+@import './utils/visually-hidden';
+@import './utils/breakpoints';
 @import "./components/container";
 @import "./components/section";
 @import "./components/btn";
-@import "./components/menu";
+@import "./components/nav-menu";
 @import "./components/page-header";
 @import "./components/hero";
 @import "./components/features";
