--- a/css/main.css
+++ b/css/main.css
@@ -317,11 +317,30 @@ body.modal-open {
   overflow: hidden;
 }
 
+.site-nav {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .container {
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 480px) {
@@ -389,29 +408,9 @@ body.modal-open {
   cursor: pointer;
 }
 
-@media screen and (min-width: 768px) {
-  .menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-  }
-}
-
-/* Site-nav */
-.site-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.site-nav .item:not(:last-child) {
-  margin-right: 50px;
+.btn:hover, .btn:focus {
+  color: #2196F3;
+  background-color: #FFFFFF;
 }
 
 .site-nav .link {
@@ -443,20 +442,6 @@ body.modal-open {
   bottom: 0;
   left: 0;
   opacity: 1;
-}
-
-.contact-info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: auto;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-}
-
-.contact-info .contact-info__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .icon-letter {
@@ -492,52 +477,126 @@ body.modal-open {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-info__link:hover,
-.contact-info__link:focus,
-.contact-info__link:active {
+.contact-info__link:hover, .contact-info__link:focus, .contact-info__link:active {
   color: #2196F3;
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
 
+.page-header__nav {
+  color: #757575;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  font-size: 18px;
+}
+
+@media screen and (min-width: 768px) {
+  .page-header__nav {
+    font-size: 14px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .site-nav__item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav__item:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .site-nav__item:last-child {
+    margin-bottom: 44px;
+  }
+}
+
+.site-nav__link {
+  color: #212121;
+  text-decoration: none;
+  display: inline-block;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav__link {
+    text-align: center;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+.site-nav__link:hover, .site-nav__link:focus {
+  color: #2196F3;
+}
+
+.site-nav__link.current {
+  position: relative;
+  color: #2196F3;
+}
+
+.site-nav__link.current::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #2196F3;
+}
+
 .container.main-container {
-  padding-top: 22px;
-  padding-left: 15px;
-  padding-right: 23px;
-  padding-bottom: 22px;
+  position: relative;
+  height: 60px;
+  padding: 0 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 @media screen and (max-width: 767px) {
   .container.main-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    width: 480px;
   }
 }
 
-.menu {
-  position: fixed;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background: #FFFFFF;
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
-}
-
-.menu.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.menu.is-open {
-  display: block;
-  fill: #2196F3;
+@media screen and (min-width: 768px) {
+  .container.main-container {
+    position: static;
+    height: 80px;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
 }
 
 .menu-button {
@@ -566,6 +625,92 @@ body.modal-open {
 
 .menu-button.is-open .icon-menu {
   display: none;
+}
+
+.menu__button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  justify-self: flex-end;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.menu__button .menu-icon {
+  display: inline-block;
+  fill: currentColor;
+}
+
+.menu__button .menu-icon:hover, .menu__button .menu-icon:focus {
+  fill: #2196F3;
+}
+
+@media screen and (min-width: 768px) {
+  .menu__button {
+    display: none;
+  }
+}
+
+.menu__button .icon-close {
+  display: none;
+}
+
+.menu__button.is-open .menu__button .icon-close {
+  display: inline-block;
+}
+
+.menu__button.is-open .menu__button .icon-menu {
+  display: none;
+}
+
+.page-header__menu {
+  background-color: #FFFFFF;
+  border-top: 1px solid #ECECEC;
+  padding: 60px 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.page-header__menu.is-open {
+  display: inline-block;
+  text-align: center;
+  z-index: 3;
+}
+
+@media screen and (max-width: 767px) {
+  .page-header__menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .page-header__menu {
+    border: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    width: 768px;
+    height: 80px;
+    padding: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .page-header__menu {
+    width: 1200px;
+  }
 }
 
 .hero {
@@ -894,21 +1039,15 @@ body.modal-open {
   background-color: #2196F3;
 }
 
-.backdrop-menu {
+.backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #FFFFFF;
+  background-color: rgba(0, 0, 0, 0.2);
   padding: 50px 30px;
   overflow-y: scroll;
-}
-
-@media screen and (min-width: 768px) {
-  .backdrop-menu {
-    display: none;
-  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -931,13 +1070,13 @@ body.modal-open {
   pointer-events: none;
 }
 
-.modal-menu {
+.modal {
   padding: 20px;
   background-color: #fff;
 }
 
 @media (max-width: 767px) {
-  .modal-menu {
+  .modal {
     position: absolute;
     top: 50%;
     left: 50%;
