--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -21,4 +21,10 @@
     align-items: center;
     text-align: center;
     cursor: pointer;
+
+    &:hover,
+    &:focus {
+      color: $accent-color;
+      background-color: $white-color;
+    }
 }
