--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -3,6 +3,8 @@
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 60px;
+    padding-bottom: 60px;
    
   
     @media screen and (min-width: 480px) {
