--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,38 +1,30 @@
 
-.backdrop-menu {
+.backdrop {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
 
-        background-color: $white-color;
+        background-color: $input-bg-color;
 
         padding: 50px 30px;
         overflow-y: scroll;
 
-        @media screen and (min-width:768px) {
-            & {
-                display: none;
-            }
-        }
-}
-
-.backdrop {
-    
-    @media screen and (min-width:1200px) {
+   
+        @media screen and (min-width:1200px) {
         
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 10;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 10;
 
-        width: 100%;
-        height: 100%;
-        background-color: $input-bg-color;
+            width: 100%;
+            height: 100%;
+            background-color: $input-bg-color;
 
-        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+            transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
 
 }
 
@@ -44,7 +36,7 @@
     
 }
 
-.modal-menu {
+.modal {
     padding: 20px;
     background-color: #fff;
   
