правит нав меню

--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -3,9 +3,7 @@
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 60px;
-    padding-bottom: 60px;
-   
+    
   
     @media screen and (min-width: 480px) {
       width: 480px;
@@ -16,12 +14,7 @@
     }
   
     @media screen and (min-width: 1200px) {
-      max-width: 1200px;
-      padding-top: 94px;
-      padding-bottom: 94;
-      padding-right: 15px;
-      padding-left: 15px;
-      margin: 0 auto;
+      width: 1200px;
     }
   }
 
