--- a/css/main.css
+++ b/css/main.css
@@ -339,8 +339,6 @@ body.modal-open {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 480px) {
@@ -357,12 +355,7 @@ body.modal-open {
 
 @media screen and (min-width: 1200px) {
   .container {
-    max-width: 1200px;
-    padding-top: 94px;
-    padding-bottom: 94;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin: 0 auto;
+    width: 1200px;
   }
 }
 
@@ -411,76 +404,6 @@ body.modal-open {
 .btn:hover, .btn:focus {
   color: #2196F3;
   background-color: #FFFFFF;
-}
-
-.site-nav .link {
-  color: #212121;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  position: relative;
-}
-
-.site-nav .link:hover,
-.site-nav .link:focus,
-.site-nav .link:active {
-  color: #2196F3;
-}
-
-.site-nav .link.current {
-  color: #2196F3;
-}
-
-.link.current::after {
-  content: '';
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background: #2196F3;
-  bottom: 0;
-  left: 0;
-  opacity: 1;
-}
-
-.icon-letter {
-  display: block;
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
-  fill: currentColor;
-}
-
-.icon-phone {
-  display: block;
-  width: 10px;
-  height: 15px;
-  margin-right: 10px;
-  fill: currentColor;
-}
-
-.contact-info__link {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  color: #757575;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contact-info__link:hover, .contact-info__link:focus, .contact-info__link:active {
-  color: #2196F3;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
 }
 
 .page-header__nav {
@@ -599,34 +522,6 @@ body.modal-open {
   }
 }
 
-.menu-button {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-}
-
-@media screen and (min-width: 768px) {
-  .menu-button {
-    display: none;
-  }
-}
-
-.menu-button .icon-close {
-  display: none;
-}
-
-.menu-button.is-open .icon-close {
-  display: block;
-}
-
-.menu-button.is-open .icon-menu {
-  display: none;
-}
-
 .menu__button {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -638,12 +533,14 @@ body.modal-open {
   background-color: transparent;
 }
 
-.menu__button .menu-icon {
+.menu__button--icon {
   display: inline-block;
+  width: 25px;
+  height: 25px;
   fill: currentColor;
 }
 
-.menu__button .menu-icon:hover, .menu__button .menu-icon:focus {
+.menu__button--icon:hover, .menu__button--icon:focus {
   fill: #2196F3;
 }
 
@@ -653,15 +550,15 @@ body.modal-open {
   }
 }
 
-.menu__button .icon-close {
+.menu__button--icon-close {
   display: none;
 }
 
-.menu__button.is-open .menu__button .icon-close {
+.menu__button.is-open .menu__button--icon-close {
   display: inline-block;
 }
 
-.menu__button.is-open .menu__button .icon-menu {
+.menu__button.is-open .menu__button--icon-menu {
   display: none;
 }
 
