--- a/sass/components/_nav-menu.scss
+++ b/sass/components/_nav-menu.scss
@@ -1,86 +1,86 @@
 
-.site-nav .link {
-  color: $title-text-color; 
+// .site-nav .link {
+//   color: $title-text-color; 
 
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  position: relative;
+//   display: block;
+//   padding-top: 32px;
+//   padding-bottom: 32px;
+//   position: relative;
   
-}
-.site-nav .link:hover, 
-.site-nav .link:focus,
-.site-nav .link:active {
-  color: $accent-color;
-}
-.site-nav  .link.current  {
-  color: $accent-color;
+// }
+// .site-nav .link:hover, 
+// .site-nav .link:focus,
+// .site-nav .link:active {
+//   color: $accent-color;
+// }
+// .site-nav  .link.current  {
+//   color: $accent-color;
 
-}
-
-
-.link.current::after {
-
-  content:'';
-  display: block;
-  position: absolute;
-
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background: $accent-color;
-  bottom: 0;
-  left: 0;
-
-  opacity: 1;
-
-}
-
-// .contact-info .contact-info__item:not(:last-child) {
-//   margin-right: 30px;
 // }
 
 
-.icon-letter  {
+// .link.current::after {
 
-  display: block;
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
-  fill: currentColor;
+//   content:'';
+//   display: block;
+//   position: absolute;
 
-}
+//   width: 100%;
+//   height: 4px;
+//   border-radius: 2px;
+//   background: $accent-color;
+//   bottom: 0;
+//   left: 0;
 
-.icon-phone {
+//   opacity: 1;
 
-  display: block;
-  width: 10px;
-  height: 15px;
-  margin-right: 10px;
-  fill: currentColor;
+// }
 
-}
+// // .contact-info .contact-info__item:not(:last-child) {
+// //   margin-right: 30px;
+// // }
 
-.contact-info__link {
 
-  position: relative;
-  display: flex;
-  color: $primary-text-color;
-  align-items:center;
-  transform: scale(1);
+// .icon-letter  {
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   display: block;
+//   width: 16px;
+//   height: 12px;
+//   margin-right: 10px;
+//   fill: currentColor;
+
+// }
+
+// .icon-phone {
+
+//   display: block;
+//   width: 10px;
+//   height: 15px;
+//   margin-right: 10px;
+//   fill: currentColor;
+
+// }
+
+// .contact-info__link {
+
+//   position: relative;
+//   display: flex;
+//   color: $primary-text-color;
+//   align-items:center;
+//   transform: scale(1);
+
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+//   transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
          
-          &:hover,
-          &:focus,
-          &:active {
+//           &:hover,
+//           &:focus,
+//           &:active {
 
-            color: $accent-color;
-            transform: scale(1.1);
-          }
+//             color: $accent-color;
+//             transform: scale(1.1);
+//           }
 
-}
+// }
 
 .page-header__nav {
   color: $primary-text-color;
