--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -20,31 +20,6 @@
   }
 }
 
-.menu-button {
-    display: inline-flex;
-    margin: 0;
-    padding: 0;
-    border: none;
-    background-color: transparent;
-  
-    @media screen and (min-width: 768px) {
-      display: none;
-    }
-  }
-  
-  .menu-button .icon-close {
-    display: none;
-  }
-  
-  .menu-button.is-open .icon-close {
-    display: block;
-  }
-  
-  .menu-button.is-open .icon-menu {
-    display: none;
-  }
-  
-
 .menu__button {
   display: inline-flex;
   justify-self: flex-end;
@@ -53,9 +28,11 @@
   border: none;
   background-color: transparent;
 
-  .menu-icon {
+  &--icon {
     display: inline-block;
-   
+    width: 25px;
+    height: 25px;
+
     fill: currentColor;
 
     &:hover,
@@ -69,7 +46,7 @@
   }
 }
 
-.menu__button .icon-close {
+.menu__button--icon-close {
   display: none;
 
   .menu__button.is-open & {
@@ -77,7 +54,7 @@
   }
 }
 
-.menu__button.is-open .menu__button .icon-menu {
+.menu__button.is-open .menu__button--icon-menu {
   display: none;
 }
 
