--- a/sass/components/_nav-menu.scss
+++ b/sass/components/_nav-menu.scss
@@ -1,87 +1,3 @@
-
-// .site-nav .link {
-//   color: $title-text-color; 
-
-//   display: block;
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-//   position: relative;
-  
-// }
-// .site-nav .link:hover, 
-// .site-nav .link:focus,
-// .site-nav .link:active {
-//   color: $accent-color;
-// }
-// .site-nav  .link.current  {
-//   color: $accent-color;
-
-// }
-
-
-// .link.current::after {
-
-//   content:'';
-//   display: block;
-//   position: absolute;
-
-//   width: 100%;
-//   height: 4px;
-//   border-radius: 2px;
-//   background: $accent-color;
-//   bottom: 0;
-//   left: 0;
-
-//   opacity: 1;
-
-// }
-
-// // .contact-info .contact-info__item:not(:last-child) {
-// //   margin-right: 30px;
-// // }
-
-
-// .icon-letter  {
-
-//   display: block;
-//   width: 16px;
-//   height: 12px;
-//   margin-right: 10px;
-//   fill: currentColor;
-
-// }
-
-// .icon-phone {
-
-//   display: block;
-//   width: 10px;
-//   height: 15px;
-//   margin-right: 10px;
-//   fill: currentColor;
-
-// }
-
-// .contact-info__link {
-
-//   position: relative;
-//   display: flex;
-//   color: $primary-text-color;
-//   align-items:center;
-//   transform: scale(1);
-
-//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-//   transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-         
-//           &:hover,
-//           &:focus,
-//           &:active {
-
-//             color: $accent-color;
-//             transform: scale(1.1);
-//           }
-
-// }
-
 .page-header__nav {
   color: $primary-text-color;
 
@@ -122,9 +38,10 @@
 }
 
 .site-nav__link {
-  @include colorTextDecor($title-text-color);
+  color: $primary-text-color;
+  text-decoration: none;
   display: inline-block;
-  // transition: $duration $timingFunction;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-top: 8px;
   padding-bottom: 8px;
 
@@ -156,3 +73,101 @@
     }
   }
 }
+.page-header__contacts {
+  @include centeredFlex();
+
+  @media screen and (min-width: 768px) {
+    margin-left: auto;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
+}
+
+.contact-info__list {
+  @extend %list;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
+  @media screen and (max-width: 767px) {
+    font-size: 18px;
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 12px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: inline-flex;
+    font-size: 14px;
+  }
+}
+
+.contact-info__item:not(:last-child) {
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+  }
+}
+
+.contact-info__link {
+  color: $primary-text-color;
+  @include centeredFlex($type: inline-flex);
+  text-decoration: none;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width: 767px) {
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+}
+.icon-letter  {
+
+  display: block;
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  fill: currentColor;
+
+}
+
+.icon-phone {
+
+  display: block;
+  width: 10px;
+  height: 15px;
+  margin-right: 10px;
+  fill: currentColor;
+
+}
+
+// .icon-letter {
+//   display: block;
+//   margin-right: 10px;
+//   fill: currentColor;
+//   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   width: 16px;
+//   height: auto;
+// }
+// .icon-phone {
+//   display: block;
+//   margin-right: 10px;
+//   fill: currentColor;
+//   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   width: 10px;
+//   height: auto;
+// }
