--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -62,6 +62,7 @@
   background-color: $white-color;
 
   border-top: 1px solid $border-color-main;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
 
   padding: 60px 15px;
   margin-left: auto;
@@ -75,6 +76,8 @@
 
   @media screen and (max-width: 767px) {
     display: none;
+    border: none;
+    box-shadow: none;
     position: absolute;
     top: 100%;
     left: 0;
