--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,10 +2,10 @@
 @import "./base/normalize";
 @import "./components/logo";
 @import "./components/common";
-@import './utils/placeholders';
-@import './utils/mixins';
-@import './utils/visually-hidden';
-@import './utils/breakpoints';
+@import "./utils/placeholders";
+@import "./utils/mixins";
+@import "./utils/visually-hidden";
+@import "./utils/breakpoints";
 @import "./components/container";
 @import "./components/section";
 @import "./components/btn";
@@ -18,7 +18,7 @@
 @import "./components/modal";
 @import "./components/clients";
 @import "./components/page-footer";
-@import "./components/projects";
+@import "./components/portfolio";
 
 
 
