--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,95 +8,97 @@
 
         background-color: $input-bg-color;
 
-        padding: 50px 30px;
+        padding: 93px 15px;
         overflow-y: scroll;
+        z-index: 7;
+        opacity: 1;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-   
+        &.is-hidden {
+            opacity: 0;
+            pointer-events: none;
+        }
         @media screen and (min-width:1200px) {
-        
             position: fixed;
             top: 0;
             left: 0;
-            z-index: 10;
-
             width: 100%;
             height: 100%;
-            background-color: $input-bg-color;
-
-            transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
-
 }
 
-.backdrop.is-hidden,
-.backdrop-menu.is-hidden {
-
-    opacity: 0;
-    pointer-events: none;
-    
-}
 
 .modal {
-    padding: 20px;
-    background-color: #fff;
-  
-    @media (max-width: 767px) {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      max-width: 500px;
-      width: 100%;
-    }
-  }
+    position: relative;
+    margin: auto;
 
-.modal {
-
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%) scale(1);
-
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    width: 528px;
-    height: 581px;
-    padding: 40px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
+    // padding: 20px;
+    background-color: $white-color;
+    // font-style: normal;
+    // font-weight: normal;
+    // // font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.01em;
-    text-align: center;
+    // text-align: center;
 
-    background-color: $white-color;
     box-shadow: 0px 2px 1px $input-bg-color, 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
 
-}
+  
+        @media screen and (min-width: 767px) and (max-width:1199px) {
+            max-width: 450px;
+            width: 100%;
+            height: auto;
+        }
+        @media screen and (min-width: 1200px) {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(1);
+            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.is-hidden .modal {
-    transform: translate(-50%, -50%) scale(0.5);
-}
+            max-width: 528px;
+            width: 100%;
+            height: 581px;
+            padding: 40px;
 
+            &.is-hidden {
+                transform: translate(-50%, -50%) scale(0.5);
+            }
+        }
+}
 
 .modal-title {
-
     margin-block: 0;
-    margin: 0;
     margin-bottom: 30px;
 
-    font-family: Roboto;
-    font-style: normal;
     font-weight: bold;
     font-size: 20px;
-    line-height: 1.15;
+    line-height: 1.5;
     text-align: center;
     letter-spacing: 0.03em;
 
     color: $title-text-color;
 
+    @media screen and (min-width: 1200px) {
+        line-height: 1.15;
+    }
+
 }
+.form {
+    width: 370px;
+  
+    @media screen and (max-width: 1199px) {
+      max-width: 370px;
+      width: 100%;
+    }
+  
+    @media screen and (min-width: 1200px) {
+      max-width: 448px;
+      width: 100%;
+    }
+  }
+
 
 .form-field {
 
@@ -130,22 +132,27 @@
    
 }
 
+.form__btn {
+    text-align: center;
+}
+
 .btn.send {
-
     display: inline-flex;
-
-    padding-left: 55px;
-    padding-right: 55px;
-
+    padding: 10px 55px;
+    transform: scale(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+    &:hover, &:focus {
+      transform: scale(1.1);
+    }
 }
 
 .form-input {
 
     margin: 0;
-    padding: 12px;
-    padding-left: 42px;
+    padding: 12px 16px 12px 42px;
 
-    width: 448px;
+    width: 100%;
     height: 40px;
     color: $input-color;
     border-width: 1px;
@@ -159,7 +166,7 @@
 }
 
 .form-input.comment {
-    
+    width: 100%;
     height: 120px;
     padding-top: 12px;
     padding-left: 16px;
@@ -170,28 +177,29 @@
 
 .policy {
 
-    display: flex;
-
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 1.71;
+    display: inline-block;
+    width: 346px;
+    font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.03em;
-    align-items: center;
-    margin-bottom: 30px;
+    // align-items: center;
+    // margin-bottom: 30px;
     cursor: pointer;
+    margin-left: 8px;
 
     color: $primary-text-color;
+    @media screen and (min-width: 1200px) {
+        font-size: 14px;
+        line-height: 1.71;
+    }
 }
 
 .terms {
-
-    display: block; 
-    margin-left: 5px;
+    display: inline-block; 
+    // margin-left: 5px;
     text-decoration: underline;
-    text-align: right;
+    // text-align: right;
     color: $accent-color;
-
 }
 
 .check {
@@ -257,10 +265,10 @@
 }
 
 .close-btn {
-
     position: absolute;
-    top: 8px;
-    right: 8px;
+    top: 0;
+    right: 0;
+    transform: translate(-8px, 8px);
 
     display: inline-flex; 
     align-items: center; 
@@ -275,12 +283,10 @@
     background-color: $white-color;
     box-shadow: 0px 2px 1px $input-bg-color, 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
 
-}
-
-.close-btn:hover .icon-close {
-
-    fill: $accent-color;
-
+    &:hover .icon-close,
+    &:focus .icon-close {
+        fill: $accent-color;
+    }
 }
 
 .form-input:focus {
