--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -86,14 +86,13 @@
     }
   }
   
-  .project__item {
-    transition: box-shadow $duration $timingFunction;
+.project__item {
   
     @media screen and (max-width: 767px) {
       width: 450px;
-      height: 404px;
-  
-      &:not(:last-child) {
+    //   height: 404px;
+
+        &:not(:last-child) {
         margin-bottom: 30px;
       }
     }
@@ -115,40 +114,40 @@
       box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
         0px 1px 1px rgba(0, 0, 0, 0.12);
     }
-  }
+}
   
-  .project__link {
-    @include colorTextDecor($title-text-color);
-    // display: block;
-    display: inline-block;
-  }
+// //   .project__link {
+// //     @include colorTextDecor($title-text-color);
+// //     // display: block;
+// //     display: inline-block;
+// //   }
   
-  .project__thumb {
-    position: relative;
-    overflow: hidden;
-  }
+//   .project__thumb {
+//     position: relative;
+//     overflow: hidden;
+//   }
   
-  .project__overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+//   .project__overlay {
+//     position: absolute;
+//     bottom: 0;
+//     left: 0;
   
-    width: 100%;
-    height: 100%;
+//     width: 100%;
+//     height: 100%;
   
-    background-color: $accentColor;
-    transform: translateY(100%);
-    /* opacity: 0; */
+//     background-color: $accentColor;
+//     transform: translateY(100%);
+//     /* opacity: 0; */
   
-    transition: transform $duration $timingFunction;
-    /* opacity 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+//     transition: transform $duration $timingFunction;
+//     /* opacity 250ms cubic-bezier(0.4, 0, 0.2, 1); */
   
-    .project__link:hover &,
-    .project__link:focus & {
-      opacity: 0.9;
-      transform: translateY(0);
-    }
-  }
+//     .project__link:hover &,
+//     .project__link:focus & {
+//       opacity: 0.9;
+//       transform: translateY(0);
+// }
+  
   
   .project__text {
     position: absolute;
@@ -165,15 +164,15 @@
     line-height: 1.56;
   }
   
-  .project__content {
-    border-bottom: 1px solid border-color-second;
-    border-right: 1px solid border-color-second;
-    border-left: 1px solid border-color-second;
+//   .project__content {
+//     border-bottom: 1px solid border-color-second;
+//     border-right: 1px solid border-color-second;
+//     border-left: 1px solid border-color-second;
   
-    padding: 20px 24px;
+//     padding: 20px 24px;
   
-    background-color: $primaryBgColor;
-  }
+//     background-color: $primaryBgColor;
+//   }
   
   .project__title {
     margin-bottom: 4px;
@@ -193,6 +192,114 @@
   }
 
   
+  .projects-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.project-thumb {
+    position: relative;
+    overflow: hidden;
+
+}
+.p-txt {
+
+    display: flex;
+    width: 322px;
+    height: 168px;
+    color: $white-color;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    opacity: 0;
+    transform: translate(-50%, -50%);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+    font-weight: normal; 
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+
+}
+
+    .card-overlay {
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: $projects-bg-color;
+    transform: translateY(100%);
+    opacity: 0;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+
+
+.project__item {
+    width: 370px;
+    border: 1px solid $border-color-second;
+    border-radius: 5px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    padding-bottom: 20px;
+
+
+        &:hover {
+           box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
+        }
+
+        &:hover .p-txt {
+           opacity: 1;
+        }
+
+        &:hover .card-overlay {
+            transform: translateY(0);
+            opacity: 1;
+        }
+}
+
+.projects-list > img {
+    display: block;
+}
+
+.projects__item:nth-child(3n) {
+    margin-right: 0;
+}
+.project__.item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+}
+.profile {
+    margin-left: 24px;
+
+   
+}
+.title.project {
+
+    margin-top: 20px;
+    margin-bottom: 4px;
+
+    text-transform: none;
+    font-size: 18px;
+    line-height: 1.2;
+    text-align: left;
+}
+.team-title.project {
+
+    margin-top: 0;
+    margin-bottom: 0;
+
+    color: $primary-text-color;
+
+    font-size: 16px;
+    line-height: 1.88;
+    text-align: left;
+}
+
 // Contacts styles 
 
 .page-header.contacts {
